atualização layout estendido para pontuação dentro da caixa do jogo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body.night .stage{ background:#11121a }  /* modo noite mantém igual */
       <div class="hint">Space or tap to jump. Arrow Down or tap bottom to duck.</div>
     </div>
     <div class="hdr-right">
-      <a class="btn secondary" href="https://x.com/cockscreener" target="_blank" rel="noopener">Twitter</a>
+      <a class="btn secondary" href="https://x.com/chrome_cock" target="_blank" rel="noopener">Twitter</a>
       <a class="btn" href="https://pump.tires" target="_blank" rel="noopener">Buy</a>
     </div>
   </header>
