--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body.night .stage{ background:#11121a }  /* modo noite mantém igual */
     </div>
     <div class="hdr-right">
       <a class="btn secondary" href="https://x.com/chrome_cock" target="_blank" rel="noopener">Twitter</a>
-      <a class="btn" href="https://pump.tires" target="_blank" rel="noopener">Buy</a>
+      <a class="btn" href="https://pump.tires/token/0x57E1388790a56236bB658E1b9b3188e30190C942" target="_blank" rel="noopener">Buy</a>
     </div>
   </header>
 
