--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Chrome Cock $cCOCK — Peacock Dino</title>
+<title>Chrome Cock $cOCK — Peacock Dino</title>
 <meta name="description" content="Chrome Dino style runner with a black pixel peacock. Name entry and live Cloudflare D1 leaderboard." />
 <style>
   :root{
@@ -75,7 +75,7 @@ body.night .stage{ background:#11121a }  /* modo noite mantém igual */
     </div>
     <div class="hdr-right">
       <a class="btn secondary" href="https://x.com/chrome_cock" target="_blank" rel="noopener">Twitter</a>
-      <a class="btn" href="https://pump.tires/token/0x57E1388790a56236bB658E1b9b3188e30190C942" target="_blank" rel="noopener">Buy</a>
+      <a class="btn" href="https://pump.tires/token/" target="_blank" rel="noopener">Buy</a>
     </div>
   </header>
 
