--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body.night .stage{ background:#11121a }  /* modo noite mantém igual */
 <div class="wrap">
   <header>
     <div>
-      <h1>Chrome Cock $cCOCK</h1>
+      <h1>Chrome Cock $cOCK</h1>
       <div class="hint">Space or tap to jump. Arrow Down or tap bottom to duck.</div>
     </div>
     <div class="hdr-right">
